PINN/jitfailure-dolfin_expression_39b6c1a9bdd126b08456f9ca7a836a91/error.log
/tmp/tmpggnq32cx/dolfin_expression_39b6c1a9bdd126b08456f9ca7a836a91.cpp: In member function ‘virtual void dolfin::dolfin_expression_39b6c1a9bdd126b08456f9ca7a836a91::eval(Eigen::Ref<Eigen::Matrix<double, -1, 1> >, Eigen::Ref<const Eigen::Matrix<double, -1, 1> >) const’:
/tmp/tmpggnq32cx/dolfin_expression_39b6c1a9bdd126b08456f9ca7a836a91.cpp:61:28: error: ‘np’ was not declared in this scope
   61 |           values[0] = -sin(np.pi * x);
      |                            ^~
